--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -65,17 +65,17 @@ jobs:
       - name: Run flake8
         run: flake8 . --show-source --statistics
 
-  gitleaks:
-      runs-on: ubuntu-latest
-      needs: flake8
-      steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
+  gitleaks: 
+    runs-on: ubuntu-latest
+    needs: flake8
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-        - name: Run Gitleaks Secret Scan
-          uses: gitleaks/gitleaks-action@v2
-          with:
-            args: detect --source . --no-git
+      - name: Run Gitleaks Secret Scan
+        uses: gitleaks/gitleaks-action@v2
+        with:
+          args: detect --source . --no-git --redact --exit-code 1
 
   codeql:
     name: CodeQL Analysis
