--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -76,6 +76,7 @@ jobs:
         uses: gitleaks/gitleaks-action@v2
         with:
           args: detect --source . --no-git --redact --exit-code 1
+        continue-on-error: true
 
   codeql:
     name: CodeQL Analysis
