--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -334,6 +334,7 @@ jobs:
       - name: Deploy to K3s cluster
         run: |
           sed -i "s|:latest|:${{ env.IMAGE_TAG }}|g" k8s/overlays/testing/kustomization.yaml
+          sed -i "s|CONTROL_PLANE_IP|${{ needs.terraform.outputs.control_plane_ip }}|g" k8s/overlays/testing/ingress-patch.yaml
 
           ls -R k8s/overlays/testing/
 
