--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -340,7 +340,7 @@ jobs:
 
           kubectl apply -k k8s/overlays/testing/
 
-          kubectl wait --for=condition=available --timeout=600s deployment/flaskapp -n flaskapp
+          kubectl wait --for=condition=available --timeout=600s deployment/flaskapp
 
           kubectl get pods -n flaskapp
           kubectl get services -n flaskapp
