--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -169,7 +169,7 @@ jobs:
     # 7) Deploy to K3s cluster
   deploy_to_k8s:
     runs-on: ubuntu-latest
-    needs: trivy_scan
+    # needs: trivy_scan
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
     env:
