--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -1,52 +1,72 @@
-# k8s/base/deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: flaskapp # Deployment name
+  name: flaskapp
 spec:
-  replicas: 1  # Number of Flask app replicas (1 pod)
+  replicas: 1
   selector:
     matchLabels:
-      app: flaskapp # Match pods with this label
+      app: flaskapp
   template:
     metadata:
       labels:
-        app: flaskapp # Label for the Flask app
+        app: flaskapp
     spec:
-
-      # Init container to wait until MySQL is ready before starting Flask
+      # Init container to wait for MySQL readiness
       initContainers:
         - name: wait-for-mysql
           image: busybox:1.35
-          command: ['sh', '-c', 'until nc -z mysql 3306; do echo waiting for mysql; sleep 2; done;']
+          command:
+            - sh
+            - -c
+            - |
+              echo "Waiting for MySQL..."
+              until nc -z mysql 3306; do
+                echo "MySQL not ready, sleeping..."
+                sleep 5
+              done
+              echo "MySQL is up!"
       containers:
         - name: flaskapp
-          image: yehiashaikhoun/flaskapp:latest # Flask app image
+          image: yehiashaikhoun/flaskapp:latest
           imagePullPolicy: Always
+
           envFrom:
             - configMapRef:
                 name: flaskapp-config
 
-          # Environment variables for the Flask app
           env:
             - name: FLASK_APP
-              value: app.py # Flask entrypoint
-            - name: MYSQL_DATABASE_PASSWORD # MySQL password
+              value: app.py
+            - name: MYSQL_DATABASE_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: db-secret
                   key: MYSQL_DATABASE_PASSWORD
+
           ports:
-            - containerPort: 5002 # Flask app port
+            - containerPort: 5002
+
           readinessProbe:
             httpGet:
-              path: /readiness # Readiness probe path
-              port: 5002 # Flask app port
-            initialDelaySeconds: 30
+              path: /readiness
+              port: 5002
+            initialDelaySeconds: 40   # allow more time for app to start
             periodSeconds: 10
+            failureThreshold: 6       # tolerate 1 min of failures before marking not-ready
+
           livenessProbe:
             httpGet:
-              path: /healthz # Liveness probe path
-              port: 5002 # Flask app port
-            initialDelaySeconds: 60
+              path: /healthz
+              port: 5002
+            initialDelaySeconds: 90   # wait longer before checking health
             periodSeconds: 30
+            failureThreshold: 3
+
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
