--- a/k8s/base/pvc.yaml
+++ b/k8s/base/pvc.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce # Access mode
+  storageClassName: local-path # Use local-path for single-node clusters
   resources:
     requests:
       storage: 1Gi # Storage size
