--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -14,6 +14,8 @@ spec:
       labels:
         app: flaskapp
     spec:
+      imagePullSecrets:
+      - name: ecr-secret
       containers:
       - name: flaskapp
         image: yehiashaikhoun/flaskapp:latest
