--- a/k8s/base/ingress.yaml
+++ b/k8s/base/ingress.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   ingressClassName: nginx # Ingress class name
   rules:
-    - host: CONTROL_PLANE_IP.nip.io # or testing.local (mapped in /etc/hosts if needed)
+    - host: 54.154.109.118.nip.io # or testing.local (mapped in /etc/hosts if needed)
       http:
         paths:
           - path: /flask(/|$)(.*)
